# agent

./: .env.sample  .gitignore  AGENTS.md  README.md  docker-compose.yml  model_providers.example.json  paths.py  pyproject.toml
.cursor/rules/: http-api.mdc  python.mdc  scaffold.mdc
app/: main.py
app-bak/application/agent/: middleware.py  runner.py
app-bak/application/chat/: service.py
app-bak/application/support/: text.py
app-bak/domain/: exceptions.py
app-bak/domain/conversation/: enums.py  repository.py
app-bak/domain/gateway/: entity.py  exceptions.py  repository.py
app-bak/domain/knowledge/: repository.py
app-bak/domain/memory/: repository.py
app-bak/domain/skill/: entity.py  exceptions.py
app-bak/infrastructure/context/: request_scope.py
app-bak/infrastructure/document/: chunker.py
app-bak/infrastructure/llm/: credentials.py  embeddings.py  factory.py  selection.py
app-bak/infrastructure/logging/: formatters.py
app-bak/infrastructure/skill/: loader.py
app-bak/infrastructure/tools/: context.py  rag_tools.py  registry.py  skill_tools.py  terminal_tools.py  web_tools.py
app-bak/infrastructure/vector/: cosine.py
app-bak/interfaces/cli/: bootstrap.py  tui.py
app-bak/interfaces/gateway/: __main__.py
app/application/: __init__.py
app/application/agent/: prompt_context.py  runner.py
app/application/conversation/: service.py
app/application/dto/: chat.py  model_setup.py
app/application/gateway/: service.py
app/application/memory/: service.py
app/application/ports/: chat_model.py
app/application/rag/: service.py
app/application/skill/: service.py
app/application/support/: pagination.py  ulid.py
app/application/user/: security.py  service.py
app/domain/conversation/: entity.py  exceptions.py
app/domain/knowledge/: entity.py  exceptions.py
app/domain/llm/: entity.py  exceptions.py
app/domain/memory/: entity.py  exceptions.py
app/domain/user/: entity.py  enums.py  exceptions.py  repository.py
app/domain/workspace/: entity.py
app/infrastructure/database/: connection.py  db.py  manager.py  session.py  sync.py
app/infrastructure/document/: loaders.py
app/infrastructure/llm/: catalog.py  credentials.py  factory.py  registry.py  selection.py
app/infrastructure/logging/: channel.py  filters.py  handlers.py  manager.py
app/infrastructure/memory/: sqlite_sync.py
app/infrastructure/model/: __init__.py  catalog.py  chat_gateway.py  model_router.py  provider_factory.py  setup_service.py
app/infrastructure/persistence/: pagination.py  registry.py
app/infrastructure/tools/: context.py  file_tools.py  memory_tools.py  path_guard.py  policy.py  registry.py  session_tools.py  terminal_tools.py  todo_tools.py
app/infrastructure/vector/: sqlite_search.py
app/interfaces/: __init__.py
app/interfaces/cli/: __main__.py  commands.py  main.py  render.py  session.py
app/interfaces/gateway/: main.py
config/: agent.py  app.py  config.py  database.py  llm.py  logging.py  model.py  storage.py
config-bak/: cors.py  gateway.py  llm.py  memory.py  rag.py
database/: alembic.ini
database/migrations/: env.py
tests/: test_anthropic_provider.py  test_model_setup.py
(+84 files in other folders)
