[project]
name = "agent"
version = "0.2.0"
description = "Agent runtime — personal CLI + online API service powered by LangChain."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "CaoGaoYu", email = "1765841705@qq.com"}
]
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-openrouter>=0.1.0",
    "langchain-anthropic>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "aiosqlite>=0.22.1",
    "prompt-toolkit>=3.0.52",
    "rich>=14.0.0",
]

[project.scripts]
agent = "app.interfaces.cli.main:main"
agent-gateway = "app.interfaces.gateway.main:main"

[project.optional-dependencies]
gateway = [
    "python-telegram-bot>=21.0",
]
test = [
    "websockets>=16.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[tool.ty.environment]
python-version = "3.14"

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150
select = ["E", "F", "I", "N", "W", "UP"]
