[project]
name = "agent"
version = "0.1.0"
description = "Early-stage personal Agent runtime skeleton built with FastAPI."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "CaoGaoYu", email = "1765841705@qq.com"}
]
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.48.0",
    "pydantic-settings>=2.14.1",
    "pydantic>=2.13.4",
    "openai>=2.0.0",
    "anthropic>=0.75.0",
]

[project.scripts]
agent-api = "app.main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[tool.ty.environment]
python-version = "3.14"

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
